# user-service

./: Cargo.toml  Dockerfile  Makefile
migrations/2021-02-10-174940_create_users/: up.sql
migrations/2021-02-10-175735_create_parkings/: down.sql  up.sql
migrations/2021-02-10-182940_create_parkings_consumers/: down.sql  up.sql
src/: auth.rs  db_schema.rs  errors.rs  filters.rs  handlers.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/db/: db_schema.rs  mod.rs
src/handlers/: error_handler.rs  mod.rs  parking_handler.rs  parking_password_handler.rs  user_handler.rs
src/models/: mod.rs  parking.rs  parking_consumer.rs  user.rs
src/routes/: auth.rs  filters.rs  mod.rs
src/security/: mod.rs
