[package]
name = "user-service"
version = "0.1.0"
authors = ["jBosak <jbosak98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.0"
serde = { version = "1.0.117", features = ["derive"] }